--- a/TPLaComandaApp/package.json
+++ b/TPLaComandaApp/package.json
@@ -23,11 +23,13 @@
     "@capacitor/core": "2.4.2",
     "@ionic-native/barcode-scanner": "^5.29.0",
     "@ionic-native/core": "^5.0.0",
+    "@ionic-native/onesignal": "^5.29.0",
     "@ionic-native/splash-screen": "^5.0.0",
     "@ionic-native/status-bar": "^5.0.0",
     "@ionic/angular": "^5.0.0",
     "angularfire2": "^5.4.2",
     "firebase": "^7.24.0",
+    "onesignal-cordova-plugin": "^2.11.1",
     "phonegap-plugin-barcodescanner": "^8.1.0",
     "rxjs": "~6.5.5",
     "tslib": "^2.0.0",
