--- a/TPLaComandaApp/package.json
+++ b/TPLaComandaApp/package.json
@@ -32,6 +32,7 @@
     "onesignal-cordova-plugin": "^2.11.1",
     "phonegap-plugin-barcodescanner": "^8.1.0",
     "rxjs": "~6.5.5",
+    "sweetalert2": "^10.10.2",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.3"
   },
